# Namma-Finance

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  package.json  pnpm-lock.yaml  tsconfig.base.json
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.dev.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/migrations/: 0001_initial.sql  0002_seed.sql  0003_feedback_round1.sql  0004_phase2.sql  0005_backfill_team_expenses.sql  0006_sync_tracking.sql  0007_time_tracking.sql  0008_financial_record_lifecycle.sql  0009_contract_revisions.sql  0010_contract_revision_integrity.sql  0011_payment_allocation_integrity.sql  0012_audit_log.sql  0013_audit_remediation.sql  0014_backup_hardening.sql  0015_backup_audit_hardening.sql  0016_domain_validation.sql  0017_domain_validation_audit.sql  0018_managed_documents.sql  0019_document_cache_isolation.sql  0020_sync_conflict_safety.sql  0021_sync_conflict_remediation.sql  0022_numbering_safety.sql  0023_numbering_remediation.sql
apps/desktop/src-tauri/src/: lib.rs  main.rs
docs/: PHASE3-SETUP.md  PHASE4-MOBILE.md  QUALITY-GATES.md  SECURITY-THREAT-MODEL.md  supabase-0007-time-entries.sql  supabase-0008-financial-lifecycle.sql  supabase-0009-contract-revisions.sql  supabase-0010-contract-revision-integrity.sql  supabase-0011-payment-allocation-integrity.sql  supabase-0012-domain-validation.sql  supabase-0013-managed-documents.sql  supabase-0014-numbering-safety.sql  supabase-0015-contract-sync-security.sql  supabase-0016-numbering-trigger-safe-repair.sql  supabase-0017-allocation-integrity-trigger-safe.sql  supabase-certificate-revision-preflight.sql  supabase-cloud-preflight.sql  supabase-numbering-collision-preflight.sql  supabase-reset-test-data.sql  (+3 more)
(+129 files in other folders)
