[package]
name = "mep-finance-desktop"
version = "0.6.7"
description = "NAMAA Finance — Project Financial Management for MEP design offices"
authors = ["MEP Finance"]
edition = "2021"

[lib]
name = "mep_finance_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sqlx = { version = "0.8.6", default-features = false, features = ["sqlite", "runtime-tokio"] }
sha2 = "0.10"
argon2 = "0.5"
pbkdf2 = "0.12"
subtle = "2"
rand_core = { version = "0.6", features = ["getrandom"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Storage_FileSystem"] }

[dev-dependencies]
tempfile = "3"
